[project]
name = "coderbyte"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Guilherme", email = "tocchettoo@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
